# langgraph-workflows

./: .gitignore  .windsurfrules  README.md
agent-chat-app/: .gitignore  netlify.toml  package.json  pnpm-lock.yaml  windsurf_deployment.yaml
backend/: app.py  requirements.txt
backend/mcp_tools_server/: README.md  pyproject.toml  tools.json
backend/mcp_tools_server/src/mcp_tools_server/: server.py
backend/models/: models.py
backend/routers/: template_router.py  tool_router.py  workflow_router.py
backend/utils/: file_operations.py
data/: workflows.json
docker/: docker-compose.yml
docker/seed/: data.sql  schema.sql
docs/: design.md
fine-tuned-models/excel-column-mapper/: README.md  column_mapping_training_data_sample.json  generate-data.py  generate_data.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css  main.tsx
langgraph-app/: README.md
langgraph-app/api/: README.md  api_tests.http  client.py  main.py  requirements.txt
langgraph-app/credit_api/: README-API.md  api.js  credit_demo.sqlite  init-db.js  package.json  pnpm-lock.yaml  (+1 more)
langgraph-app/workflow-engine/: .env.example  .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt  run.sh  setup.py  start_server.py  test.sh
langgraph-app/workflow-engine/api/: web.py
langgraph-app/workflow-engine/logs/: data_cleaner.py  data_wrangler.py
langgraph-app/workflow-engine/src/bookstore/: README.md  agents.py  graph.py  messages.py  node_utils.py  prompts.py  tools.py  types.py  utils.py
langgraph-app/workflow-engine/src/credit_agents/: graph.py  test_workflow.py
langgraph-app/workflow-engine/src/credit_agents_deterministic/: graph.py  messages.py  node_utils.py  prompts.py  state.py  test_workflow.py  tools.py  utils.py
langgraph-app/workflow-engine/src/credit_agents_dynamic/: README.md  graph.py  node_utils.py  prompts.py  state.py  test_workflow.py  tools.py
langgraph-app/workflow-engine/src/cv_analyzer/: agents.py  graph.py
langgraph-app/workflow-engine/src/data_transformer_agent/: graph.py
langgraph-app/workflow-engine/src/design_doc_generator/: doc_writer.py  graph.py  main.py
langgraph-app/workflow-engine/src/design_doc_generator/prompts/: design_summary.txt  generate_db_schema.txt  generate_dfd.txt
langgraph-app/workflow-engine/src/design_doc_generator/utils/: mermaid.py
langgraph-app/workflow-engine/src/mcp_agent/: graph.py
langgraph-app/workflow-engine/src/mermaid_fixer/: __init__.py  graph.py
langgraph-app/workflow-engine/src/meta_prompter/: graph.py
langgraph-app/workflow-engine/src/meta_prompter_windsurf/: README.md  REFACTORING_SUMMARY.md  __init__.py  graph.py  messages.py  test_message_handling.py
langgraph-app/workflow-engine/src/meta_prompter_windsurf/nodes/: __init__.py  workflow_nodes.py
langgraph-app/workflow-engine/src/meta_prompter_windsurf/parsers/: __init__.py  output_parsers.py
langgraph-app/workflow-engine/src/meta_prompter_windsurf/prompts/: __init__.py  templates.py
langgraph-app/workflow-engine/src/meta_prompter_windsurf/types/: __init__.py  agent_state.py
langgraph-app/workflow-engine/src/meta_prompter_windsurf/utils/: __init__.py  helpers.py
langgraph-app/workflow-engine/src/self_learning_graphiti/: graph.py
langgraph-app/workflow-engine/src/self_learning_rules/: graph.py
langgraph-app/workflow-engine/src/self_learning_summary/: graph.py
langgraph-app/workflow-engine/src/service_now_mcp/: graph.py
langgraph-app/workflow-engine/src/service_now_sentiment/: graph.py  prompts.py
langgraph-app/workflow-engine/src/slack_approval/: README.md  __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
langgraph-app/workflow-engine/src/smart_goals/: graph.py  prompts.py  tools.py
langgraph-app/workflow-engine/src/swot_analyzer/: __init__.py  nodes.py  prompts.py  state.py  swot_agent.py  utils.py
langgraph-app/workflow-engine/tests/evaluators/: test_langsmith_evaluators.py
langgraph-app/workflow-engine/tests/integration_tests/: test_graph.py  test_meta_prompter.py
langmem-kg/: main.py  pyproject.toml  setup.sh
mcp_tools_server/: README.md
(+56 files in other folders)
