[project]
name = "mcp-tools-server"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "httpx>=0.28.1",
 "mcp[cli]>=1.3.0",
]
[[project.authors]]
name = "Chandima Ranaweera"
email = "chan4lk@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-tools-server = "mcp_tools_server:main"
